--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "babel-preset-node5",
   "version": "6.1.3",
   "description": "Babel preset for Node 5.x (ES6, React + async/await)",
+  "repository": "git://github.com/leebenson/babel-preset-node5.git",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
