--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-preset-node5",
-  "version": "6.1.3",
+  "version": "6.1.3-3",
   "description": "Babel preset for Node 5.x (ES6, React + async/await)",
   "repository": "git://github.com/leebenson/babel-preset-node5.git",
   "main": "index.js",
@@ -18,7 +18,6 @@
   "author": "Lee Benson <lee@leebenson.com>",
   "license": "MIT",
   "dependencies": {
-    "babel-plugin-syntax-async-functions": "^6.0.14",
     "babel-plugin-transform-es2015-destructuring": "^6.0.18",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.1.3",
     "babel-plugin-transform-es2015-parameters": "^6.0.18",
