--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "babel-preset-node5",
-  "version": "6.1.3-3",
-  "description": "Babel preset for Node 5.x (ES6, React + async/await)",
+  "version": "6.1.3-4",
+  "description": "Babel preset for Node 5.x (ES6 + React)",
   "repository": "git://github.com/leebenson/babel-preset-node5.git",
   "main": "index.js",
   "scripts": {
