--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-preset-node5",
-  "version": "6.1.3-5",
+  "version": "6.1.4",
   "description": "Babel preset for Node 5.x (ES6, React, Flow)",
   "repository": "git://github.com/leebenson/babel-preset-node5.git",
   "main": "index.js",
@@ -18,14 +18,14 @@
   "author": "Lee Benson <lee@leebenson.com>",
   "license": "MIT",
   "dependencies": {
-    "babel-plugin-transform-es2015-destructuring": "^6.0.18",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.1.3",
-    "babel-plugin-transform-es2015-parameters": "^6.0.18",
-    "babel-plugin-transform-es2015-sticky-regex": "^6.0.18",
-    "babel-plugin-transform-es2015-unicode-regex": "^6.0.18",
-    "babel-plugin-transform-flow-strip-types": "^6.0.14",
-    "babel-plugin-transform-strict-mode": "^6.1.2",
-    "babel-polyfill": "^6.0.16",
-    "babel-preset-react": "^6.1.2"
+    "babel-plugin-transform-es2015-destructuring": "^6.1.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.1.4",
+    "babel-plugin-transform-es2015-parameters": "^6.1.4",
+    "babel-plugin-transform-es2015-sticky-regex": "^6.1.4",
+    "babel-plugin-transform-es2015-unicode-regex": "^6.1.4",
+    "babel-plugin-transform-flow-strip-types": "^6.1.4",
+    "babel-plugin-transform-strict-mode": "^6.1.4",
+    "babel-polyfill": "^6.1.4",
+    "babel-preset-react": "^6.1.4"
   }
 }
