--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-preset-node5",
-  "version": "6.1.20",
+  "version": "6.1.20-3",
   "description": "Babel preset for Node 5.x (ES6, React, Flow)",
   "repository": "git://github.com/leebenson/babel-preset-node5.git",
   "main": "index.js",
@@ -25,6 +25,7 @@
     "babel-plugin-transform-es2015-sticky-regex": "^6.1.18",
     "babel-plugin-transform-es2015-unicode-regex": "^6.1.18",
     "babel-plugin-transform-flow-strip-types": "^6.1.18",
+    "babel-plugin-transform-object-rest-spread": "^6.1.18",
     "babel-plugin-transform-strict-mode": "^6.1.18",
     "babel-polyfill": "^6.1.19",
     "babel-preset-react": "^6.1.18"
