--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-preset-node5",
-  "version": "10.7.0",
+  "version": "10.8.0",
   "description": "Babel preset for Node 5.x (ES6 / ES2015)",
   "repository": "git://github.com/leebenson/babel-preset-node5.git",
   "main": "index.js",
@@ -20,6 +20,7 @@
   "dependencies": {
     "babel-plugin-syntax-async-functions": "^6.5.0",
     "babel-plugin-syntax-object-rest-spread": "^6.5.0",
+    "babel-plugin-syntax-trailing-function-commas": "^6.5.0",
     "babel-plugin-transform-async-to-generator": "^6.5.0",
     "babel-plugin-transform-es2015-destructuring": "^6.6.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.6.3",
